--- a/src/app/pages/properties/components/page-2/page-2.component.html
+++ b/src/app/pages/properties/components/page-2/page-2.component.html
@@ -1,4 +1,4 @@
-<div class="container my-4">
+<div class="container page-size my-4">
     <div class="text-end">
         <img src="/logo-3.png" alt="SHARESIDENCES Emirates Logo" height="40">
     </div>
