--- a/src/assets/scss/layouts/_full-page.layout.scss
+++ b/src/assets/scss/layouts/_full-page.layout.scss
@@ -7,8 +7,8 @@ html {
     display: flex;
   }
   .main {
-    height: 100vh;
-    width: 100%;
+    width: 794px;
+    height: 1123px;
     overflow: hidden;
     transition: all 0.35s ease-in-out;
     background-color: white;
