main page added

--- a/src/app/pages/properties/components/page-1/page-1.component.html
+++ b/src/app/pages/properties/components/page-1/page-1.component.html
@@ -7,7 +7,7 @@
                 <img src="/sha-logo.png" class="img-fluid w-75 align-self-center"/>
                 <div class="vstack align-items-center justify-content-center">
                     <h4 class="mb-0">SALES OFFER</h4>
-                      <p class="mb-0">Unit No:</p>  
+                      <p class="mb-0">Unit No: {{selectedProperty()?.unit_code}}</p>  
                 </div>
             </div>
         </div>
