main page added

--- a/src/app/pages/properties/components/main/main.component.html
+++ b/src/app/pages/properties/components/main/main.component.html
@@ -34,7 +34,7 @@
             
         </form>
 
-      <app-page-1 [selectedProperty]="selectedProperty" class="page"/>
+      <app-page-1 [selectedProperty]="selectedProperty" class="page print-only"/>
       <!-- <div class="page-break"></div> -->
        <app-page-2 [selectedProperty]="selectedProperty" [installmentsPlan]="installmentsPlan" class="page"/>
     </div>
