--- a/src/app/pages/properties/components/page-2/page-2.component.html
+++ b/src/app/pages/properties/components/page-2/page-2.component.html
@@ -1,6 +1,6 @@
 <div class="container page-size my-4">
     <div class="text-end">
-        <img src="/logo-3.png" alt="SHARESIDENCES Emirates Logo" height="40">
+        <img src="/sha-2.png" alt="SHARESIDENCES Emirates Logo" height="40">
     </div>
     <div class="d-flex justify-content-center">
         <div class="text-center bg-gray rounded-pill px-5 sales-container py-2">
