--- a/src/app/pages/properties/components/main/main.component.scss
+++ b/src/app/pages/properties/components/main/main.component.scss
@@ -1,5 +1,5 @@
 .main-width-fluid{
-    width: 794px;
+    width: 100%;
     height: 1123px;
 }
 
@@ -7,18 +7,12 @@
     padding-bottom: 0.2rem
 }
 
-.print-only {
-    display: none;
-  }
-@media print {
-    .noprint {
-       display:none;
-    }
-    .page, .page-break { break-after: page; }
-    .print-only {
-        display: block;
-      }
+ .col-9{
+    width: 82%;
  }
+
+
+
 
 
 
