--- a/src/app/pages/properties/components/page-1/page-1.component.html
+++ b/src/app/pages/properties/components/page-1/page-1.component.html
@@ -1,4 +1,4 @@
-<main class="main-width-fluid  pt-2">
+<main class="main-width-fluid pt-2">
     <div class="vstack p-2 justify-content-between h-100">
         
         <div class="vstack align-items-center justify-content-center gap-3">
@@ -12,13 +12,13 @@
             </div>
         </div>
         
-        <div class="hstack justify-content-between">
-            <span>
+        <div class="hstack justify-content-center">
+            <!-- <span>
                 <p class="mb-0 text-muted">Exclusive Agents</p>
                 <img src="/kf-logo.png" class="img-fluid"/>
-            </span>
+            </span> -->
             <img src="/sha-2.png" class="img-fluid"/>
-            <img src="/imkan.png" class="img-fluid"/>
+            <!-- <img src="/imkan.png" class="img-fluid"/> -->
         </div>
     </div>
   </main>
