--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -50,3 +50,55 @@ body {
 .text-sm{
   font-size: 0.8rem;
 }
+
+.print-only {
+  display: none;
+}
+
+@media print {
+  .bg-dark {
+    // background-color: #f4f4f4 !important;
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
+  }
+
+  .noprint, .noprint * {
+    display: none !important;
+    visibility: hidden !important;
+  }
+
+  .print-only {
+    display: block !important;
+  }
+  .details-page{
+    font-size: 0.75rem;
+  }
+
+  .page-break {
+    page-break-after: always;
+    break-after: page;
+  }
+
+  /* Optional: reset layout issues for printing */
+  body, html {
+    margin: 0;
+    padding: 0;
+  }
+
+  .img-fluid-print{
+      height: 90vh !important;
+  }
+}
+
+
+.gradient-bg {
+  background: linear-gradient(120deg, #ffffff 0%, #f5f6f7 40%, #e0e1e2 100%);
+  -webkit-print-color-adjust: exact;
+  print-color-adjust: exact;
+}
+
+.img-fluid-print{
+  max-width: 100%;
+  height: auto;
+}
+
