--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -12,7 +12,7 @@ $bg-100: #f2f2f2;
 $bg-200: #e8e8e8;
 $bg-300: #bfbfbf;
 
-$red-shade: #d74242;
+$red-shade: #d0103a;
 
 $yellow-shade: #ffcc00;
 $yellow-shade-100: #f9a200;
