--- a/src/app/pages/properties/components/page-2/page-2.component.html
+++ b/src/app/pages/properties/components/page-2/page-2.component.html
@@ -32,7 +32,7 @@
             <div class="col-md-6 hstack justify-content-between bg-dark">BUA: <p class="text-end mb-0">{{selectedProperty()?.bua}}</p></div>
         </div>
         <div class="row justify-content-between mb-2 " >
-            <div class="col-md-6 hstack justify-content-between">{{selectedProperty()?.isAppartment?'Appartment':'Villa'}} Type: <p class="text-end mb-0">{{selectedProperty()?.type}} </p></div>
+            <div class="col-md-6 hstack justify-content-between">{{selectedProperty()?.isAppartment?'Appartment':'Villa'}} Type: <p class="text-end mb-0">{{getPropertyType()}} </p></div>
             <div class="col-md-6 hstack justify-content-between">SQFT: <p class="text-end mb-0">{{selectedProperty()?.sqft}}</p></div>
         </div>
         <div class="row justify-content-between mb-2 " >
