villa imgs added

--- a/src/app/pages/properties/components/main/main.component.html
+++ b/src/app/pages/properties/components/main/main.component.html
@@ -9,7 +9,7 @@
   <div class="row mt-2 rounded m-auto main-container noprint">
     <!-- --- form --- -->
     <div class="w-100 d-flex justify-content-center noprint">
-      <form class="shadow rounded p-3 w-50 d-flex flex-column gap-3" [formGroup]="templateForm">
+      <form class="shadow rounded p-3 form-container d-flex flex-column gap-3" [formGroup]="templateForm">
         <div>
           <label class="fw-bold m-0">Property Type</label>
           <span class="col hstack flex-grow-1">
