villa imgs added

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -71,7 +71,7 @@ body {
     display: block !important;
   }
   .details-page{
-    font-size: 0.75rem;
+    font-size: 12px;
   }
 
   .page-break {
