feedback changes completed

--- a/src/app/pages/properties/components/page-1/page-1.component.html
+++ b/src/app/pages/properties/components/page-1/page-1.component.html
@@ -12,13 +12,13 @@
             </div>
         </div>
         
-        <div class="hstack justify-content-center">
-            <!-- <span>
+        <div class="hstack justify-content-between align-items-center">
+            <span>
                 <p class="mb-0 text-muted">Exclusive Agents</p>
                 <img src="/kf-logo.png" class="img-fluid"/>
-            </span> -->
+            </span>
             <img src="/sha-2.png" class="img-fluid"/>
-            <!-- <img src="/imkan.png" class="img-fluid"/> -->
+            <img src="/imkan.png" class="img-fluid"/>
         </div>
     </div>
   </main>
